# dora

./: .gitignore  ARCHITECTURE.md  CREDITS  LICENSE  README.md  eslint.config.js  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.ts  vite.config.ts.bak
.github/workflows/: README.md  release-automated.yml  release.yml
.superpowers/brainstorm/32742-1773391395/: .server-stopped  architecture-overview.html
.zed/: settings.json
sidecar/: README.md  build.py  dora_sidecar.py
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json  tauri.navigator.conf.json
src-tauri/capabilities/: chatbar.json  default.json  desktop.json  navigator.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  sidecar.rs
src/lib/: constants.ts
src/lib/apis/: index.ts
src/lib/apis/audio/: index.ts
src/lib/app/: constants.ts  sidecar.ts  state.ts
src/lib/components/: ChangelogModal.svelte  OnBoarding.svelte
src/lib/i18n/: index.ts
src/lib/sidecar/: config.ts  index.browser.ts  index.ts  types.ts
src/lib/stores/: cross-window-writable.ts  index.ts
src/lib/types/: index.ts
src/lib/utils/: index.ts
src/routes/: +layout.js  +layout.svelte  Layout.svelte
src/routes/(app)/: +layout.svelte  +page.svelte
src/routes/auth/: +page.svelte
src/routes/chatbar/: +layout.svelte  +page.svelte
src/routes/error/: +page.svelte
src/routes/navigator/: +layout.svelte  +page.svelte
src/routes/research/: +page.svelte
src/routes/setup/: +page.svelte
static/: navigator.html
(+171 files in other folders)
