[package]
name = "open-webui-desktop"
version = "0.1.0"
description = "A desktop app for Open WebUI, a popular self-hosted LLM WebU, built using Tauri 2"
authors = ["Reece Holmdahl"]
edition = "2021"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "open_webui_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["macos-private-api", "devtools"] }
tauri-plugin-opener = "2.2.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.2"
tauri-plugin-log = "2"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.2"
tauri-plugin-single-instance = "2.2"

